[FIX] web_studio: fixing checkbox visibility in dark mode
Before this commit:
-Checkboxes in studio were not clearly visible in dark mode due to the border
 color being too similar to the background.
-o_kanban_group had a white background that looked out of place in dark mode.

After this commit:
-Color of the border of the checkboxes is inverted in dark mode for better
 visibility
-Background color of o_kanban_group is changed to enhance its appearance in
 dark mode.

Task-3920491

closes odoo/enterprise#66466

X-original-commit: 40d0e8e35f3402c025c89825d98c06420f23995d

--- a/web_studio/static/src/client_action/studio_sidebar.scss
+++ b/web_studio/static/src/client_action/studio_sidebar.scss
@@ -201,7 +201,7 @@ $o-web-studio-sidebar-margin: $grid-gutter-width * 0.5;
                       padding: 6px 6px;
                       margin-top: 6px;
                       &:not(:checked) {
-                        border: 1px solid $o-web-studio-bg-light;
+                        border: 1px solid $o-web-studio-text-light;
                       }
                       &:checked {
                         background-image: url("/web_studio/static/src/img/ui/checkbox_active.svg");
